--- a/styles/globals.css
+++ b/styles/globals.css
@@ -30,3 +30,17 @@ a {
 .cursor-pointer {
   cursor: pointer;
 }
+
+.videos-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-gap: 20px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+@media (max-width: 600px) {
+  .videos-container {
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  }
+}
